objects/Prelog__b.object
<CustomObject>
    <fields>
        <fullName>AdvertiserProduct__c</fullName>
        <label>Advertiser/Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirDate__c</fullName>
        <label>Air Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <referenceTo>Brands__c</referenceTo>
        <relationshipLabel>Prelogs</relationshipLabel>
        <relationshipName>Prelogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Type__c</fullName>
        <label>WO Commercial Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>800#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialDescription__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderProductDescription__c</fullName>
        <label>Order Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrelogDataMirrorReference__c</fullName>
        <label>Prelog Data Mirror Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrelogDataMirror__c</fullName>
        <label>Prelog Data Mirror</label>
        <referenceTo>PrelogDataMirror__c</referenceTo>
        <relationshipLabel>Prelogs</relationshipLabel>
        <relationshipName>Prelogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Prelogs</relationshipLabel>
        <relationshipName>Prelogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduleAdID__c</fullName>
        <label>Schedule Ad-ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleLength__c</fullName>
        <label>Schedule Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleTime__c</fullName>
        <label>Schedule Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipLabel>Prelogs</relationshipLabel>
        <relationshipName>Prelogs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScribeId__c</fullName>
        <label>ScribeId</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TimePeriod__c</fullName>
        <label>Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uniqueprelog__c</fullName>
        <label>uniqueprelog</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>Index</fullName>
        <fields>
            <name>Program_Name__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>AirDate__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Schedule__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Index</label>
    </indexes>
    <label>Prelog</label>
    <pluralLabel>Prelogs</pluralLabel>
</CustomObject>